@@ -1,0 +1,5 @@
+class AddAllowFailureToBuilds < ActiveRecord::Migration
+  def change
+    add_column :builds, :allow_failure, :boolean, default: false, null: false
+  end
+end
