@@ -17,6 +17,7 @@ rspec:
 
 spinach:
   script: "rake spinach"
+  allow_failure: true
   tags: 
     - ruby
     - mysql
