@@ -9,6 +9,7 @@ v7.13.0
   - Redirect back after authorization
   - Change favicon
   - Refactoring: Get rid of private_token usage in the frontend.
+  - Allow to specify allow_failure for job
 
 v7.12.2
   - Revert: Runner without tag should pick builds without tag only
